--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
-            android:id="@+id/textView3"
+            android:id="@+id/textTitleFolder"
+            android:textStyle="bold"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/imageView"
             android:layout_toLeftOf="@+id/imageView2"
@@ -37,10 +38,10 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Small Text"
-            android:id="@+id/textView4"
-            android:layout_below="@+id/textView3"
-            android:layout_alignLeft="@+id/textView3"
-            android:layout_alignStart="@+id/textView3"
+            android:id="@+id/textDateModify"
+            android:layout_below="@+id/textTitleFolder"
+            android:layout_alignLeft="@+id/textTitleFolder"
+            android:layout_alignStart="@+id/textTitleFolder"
             android:layout_toLeftOf="@+id/imageView2"
             android:layout_toStartOf="@+id/imageView2"
             android:layout_alignBottom="@+id/imageView" />
@@ -49,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
-            android:layout_alignTop="@+id/textView3"
+            android:layout_alignTop="@+id/textTitleFolder"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/check_box_off" />
