--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,8 +11,7 @@
         android:id="@+id/imageView3"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/folder_up" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_marginLeft="10dp"
