--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="activated_selected_light" type="color">#3e000000</color>
+
 </resources>
